<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bigmikehoncho.com.riskdicesimulator.AppInfo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="top"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_lock_black_18dp"
        android:text="@string/app_info_safety" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableLeft="@android:drawable/ic_menu_recent_history"
        android:drawablePadding="8dp"
        android:drawableStart="@android:drawable/ic_menu_recent_history"
        android:text="@string/app_info_results" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        android:text="@string/acknowledgement_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:autoLink="web"
        android:textColorLink="@color/colorPrimary"
        android:text="@string/acknowledgement_MPAndroidChart" />

</LinearLayout>
